# Rustic-Print

./: Cargo.toml  README.md
.github/workflows/: .rust.yml
src/: block_options.rs  console_color.rs  lib.rs  main.rs  messages.rs  style_options.rs  table.rs
