[package]
name = "rustic_print"
version = "0.1.0"
edition = "2021"
description = "A versatile Rust library for enhancing console output. It offers a range of features to create a more engaging and informative command-line interface."
license = "MIT"
authors = ["Jordan Schnur <actjay1898@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jordan-schnur/Rustic-Print"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"