[package]
name = "rustic_print"
version = "0.2.0"
edition = "2021"
description = "A versatile Rust library for enhancing console output. It offers a range of features to create a more engaging and informative command-line interface."
license = "MIT"
authors = ["Jordan Schnur <actjay1898@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jordan-schnur/Rustic-Print"
keywords = ["console-printing", "rust-library", "formatted-output", "cli-enhancement", "text-styling"]
categories = ["command-line-interface", "text-processing", "development-tools", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
textwrap = "0.16.1"
unicode-width = "0.2.0"